test for hotspot-runtime